--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -22,17 +22,19 @@ jobs:
 
       - name: Refresh .m3u8 pointers
         run: |
-          mkdir -p output
-          # Loop channels and fetch the latest *HLS* URL (m3u8 preferred)
+          mkdir -p live
           while IFS="=" read -r key url; do
             [ -z "$key" ] && continue
             echo "Fetching $key from $url"
-            if stream=$(yt-dlp -g -f "best[protocol*=m3u8]/best" "$url" 2>/dev/null | head -n1); then
-              # Write the raw URL into a .m3u8 file (single line)
-              printf "%s\n" "$stream" > "output/${key}.m3u8"
+            # Try to grab best stream (m3u8 preferred but fallback is okay)
+            if stream=$(yt-dlp -g -f best "$url" 2>/dev/null | head -n1); then
+              if [ -n "$stream" ]; then
+                printf "%s\n" "$stream" > "live/${key}.m3u8"
+              else
+                echo "# Channel Offline" > "live/${key}.m3u8"
+              fi
             else
-              # If no live stream found, use offline 
-              echo "https://files.catbox.moe/7m59t3.mp4" > "output/${key}.m3u8"
+              echo "# Channel Offline" > "live/${key}.m3u8"
             fi
           done < <(jq -r 'to_entries[] | "\(.key)=\(.value)"' channels.json)
 
@@ -40,6 +42,6 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
-          git add output/*.m3u8
+          git add live/*.m3u8
           git commit -m "Update m3u8 pointers" || echo "No changes to commit"
           git push
